--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,14 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true
             }
         }
     ]
