--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ piston = "0.51.0"
 piston2d-graphics = "0.36.0"
 pistoncore-glutin_window = "0.65.0"
 piston2d-opengl_graphics = "0.72.0"
+rand = "0.7"
